[package]
name = "dmm-parser-rs"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1"
diff = "0.1"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
grid = "0.10"
walkdir = "2"
rand = "^0.8"
petgraph = "0.6.0"
wfc = "0.10.7"
wfc_image = "0.12.1"
image = "*"
wfc-rs = "0.6.1"

[build-dependencies]
lalrpop = "0.19"
